<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <Button 
        android:id="@+id/show_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_notify"/>
    
    <Button 
        android:id="@+id/del_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del_notify"/>
    
    <Button 
        android:id="@+id/custom_show_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_show_notify"/>
    
    <Button 
        android:id="@+id/custom_del_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_del_notify"/>
    
    
    
    
    
</LinearLayout>
