<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <Button 
        android:id="@+id/start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bindservice"/>
    
    <!--  -->
    <Button 
        android:id="@+id/stop_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unbindservice"/>
    
    <Button 
        android:id="@+id/count_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getcount"/>
    

</LinearLayout>
