<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress_show"/>
    
    <ProgressBar 
        android:id="@+id/progress1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        style="@android:style/Widget.ProgressBar.Horizontal"/>
   
    <ProgressBar 
        android:id="@+id/progress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progressDrawable="@drawable/progress_drawable"
        style="@android:style/Widget.ProgressBar.Horizontal"/>
    
    <Button 
        android:id="@+id/show_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_progress"/>
    
    <Button 
        android:id="@+id/hide_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide_progress"/>
    

</LinearLayout>













