<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
   	android:layout_gravity="center_horizontal">

    <Button
        android:id="@+id/change_butt" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:text="@string/change_butt"/>
    
    <Button android:id="@+id/change_gravity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_gravity"/>
    
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_button" />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_button" />
        
        
    </LinearLayout>

</LinearLayout>