<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button 
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"/>
        
         <Button 
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"/>
         
          <Button 
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"/>
        
    </LinearLayout>

		<!-- 定义显示图片整体的ImageView -->
        <ImageView
            android:id="@+id/images1"
            android:layout_width="fill_parent"
            android:layout_height="240dp"
            android:background="@color/green"
            android:scaleType="fitCenter"
            android:src="@drawable/c1" />

    <!-- 定义显示图片局部细节的ImageView -->
    <ImageView
            android:id="@+id/images2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:background="#0000ff" />

</LinearLayout>










